apps/immich/immich-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    pod-security.kubernetes.io/enforce: restricted
