apps/immich/immich-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/instance: immich
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich
        app.kubernetes.io/instance: immich
        app.kubernetes.io/component: server
    spec:
      serviceAccountName: immich-server
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: immich-config
              mountPath: /config
              readOnly: true
          resources:
            requests:
              cpu: 30m
              memory: 1Gi
            limits:
              cpu: 1200m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-library-pvc
        - name: immich-config
          secret:
            secretName: immich-config
