apps/immich/immich-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/component: server
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/component: server
  ports:
    - name: http
      appProtocol: kubernetes.io/ws
      protocol: TCP
      port: 2283
      targetPort: http
